# cuberite

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AndroidManifest.xml  BACKERS  CIbuild.sh  CMakeLists.txt  CMakeSettings.json  CNAME  COMPILING  COMPILING.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTORS  CheckLua.cmake  ClonePlugins.cmd  CoverityModel.cpp  Dockerfile  Doxyfile  FAQ.md  GETTING-STARTED.md  GNUmakefile  Jenkinsfile  LICENSE  Lua-LICENSE.txt  MAINTAINERS  MCServer_high_detail_debug.cmd  MakeLuaAPI.cmd  Nightbuild2008.cmd  README.md  README.txt  SetFlags.cmake  TESTING.md  UpdateVersions.cmd  app.yml  (+36 more)
Android/: .gitignore  .project  AndroidManifest.xml  CMakeLists.txt  android.toolchain.cmake  build.xml  project.properties
Android/jni/: Android.mk  Application.mk  ToJava.cpp  ToJava.h  app-android.cpp
Tools/AnvilStats/: .gitignore  AnvilStats.cpp  AnvilStats.sln  AnvilStats.txt  AnvilStats.vcproj  BiomeMap.cpp  BiomeMap.h  CMakeLists.txt  Callback.h  ChunkExtract.cpp  ChunkExtract.h  Globals.cpp  Globals.h  HeightBiomeMap.cpp  HeightBiomeMap.h  HeightMap.cpp  HeightMap.h  ImageComposingCallback.cpp  ImageComposingCallback.h  Processor.cpp  Processor.h  SpringStats.cpp  SpringStats.h  Statistics.cpp  Statistics.h  Utils.cpp  Utils.h  profile_run.cmd
Tools/GeneratorPerformanceTest/: CMakeLists.txt  GeneratorPerformanceTest.cpp
Tools/GrownBiomeGenVisualiser/: .gitignore  CMakeLists.txt  Globals.cpp  Globals.h  GrownBiomeGenVisualiser.cpp  README.md
Tools/MCADefrag/: .gitignore  CMakeLists.txt  Globals.h  MCADefrag.cpp  MCADefrag.h
Tools/NoiseSpeedTest/: CMakeLists.txt  Globals.h  NoiseSpeedTest.cpp  NoiseSpeedTest.h  SimplexNoise.h
Tools/ProtoProxy/: .gitignore  CMakeLists.txt  Connection.cpp  Connection.h  Globals.cpp  Globals.h  ProtoProxy.cpp  ProtoProxy.sln  ProtoProxy.txt  ProtoProxy.vcproj  Server.cpp  Server.h
android/: .gitignore  CMakeLists.txt  compile.sh
lib/: CMakeLists.txt  mbedtls.cmake  polarssl.cmake
lib/backward-cpp/: .gitrepo  BackwardMacros.cmake  CMakeLists.txt  README.md  backward.hpp
lib/cmake-coverage/: CodeCoverage.cmake
lib/cryptopp/: CMakeLists.txt  algebra.cpp  ccm.h  cmac.cpp  config.h  cryptlib.cpp  dsa.cpp  eccrypto.cpp  factory.h  gcm.cpp  hrtimer.cpp  misc.h  osrng.cpp  rw.h  secblock.h  seed.cpp
lib/expat/: CMakeLists.txt  xmlparse.c  xmlrole.c  xmltok_impl.c
lib/inifile/: CMakeLists.txt  iniFile.cpp  iniFile.h
lib/jsoncpp/: CMakeLists.txt
lib/lua/: CMakeLists.txt  Makefile
lib/luaexpat/: CMakeLists.txt  lxplib.c  lxplib.h
lib/luaproxy/: CMakeLists.txt  Dummy.c  lua5.1.def  lua5.1.lua
lib/md5/: CMakeLists.txt  md5.cpp  md5.h
lib/sqlite/: CMakeLists.txt  lsqlite3.c
lib/tolua++/: CMakeLists.txt  Makefile
lib/zlib/: CMakeLists.txt
src/: AllToLua.pkg  AllocationPool.h  Authenticator.cpp  Authenticator.h  Bindings.cpp  Bindings.h  BiomeDef.cpp  BiomeDef.h  BlockArea.cpp  BlockArea.h  BlockID.cpp  BlockID.h  BlockInServerPluginInterface.h  BlockInfo.cpp  BlockInfo.h  BlockSounds.h  BlockState.cpp  BlockState.h  BlockTracer.h  BlockType.cpp  BlockType.h  BlockTypePalette.cpp  BlockTypePalette.h  BlockTypeRegistry.cpp  BlockTypeRegistry.h  BookContent.cpp  BookContent.h  BoundingBox.cpp  BoundingBox.h  BrewingRecipe.cpp  BrewingRecipe.h  BrewingRecipes.cpp  BrewingRecipes.h  BroadcastGenerator.lua  Broadcaster.cpp  Broadcaster.h  Broadcasts.inc  BuildInfo.h.cmake  ByteBuffer.cpp  ByteBuffer.h  (+226 more)
src/AllTags/: AbstractTag.h  BlockTags.cpp  BlockTags.h  CMakeLists.txt  TagManager.h  Tags.h
src/Bindings/: .gitignore  AllToLua.bat  AllToLua.pkg  AllToLua.sh  AllToLua_lua.bat  BindingDependecies.txt  Bindings.cpp  Bindings.h  BindingsProcessor.lua  BlockState.cpp  BlockState.h  BlockTypePalette.cpp  BlockTypePalette.h  BlockTypeRegistry.cpp  BlockTypeRegistry.h  CMakeLists.txt  CheckBindingsDependencies.lua  DeprecatedBindings.cpp  DeprecatedBindings.h  DiffAPIDesc.lua  LuaChunkStay.cpp  LuaChunkStay.h  LuaFunctions.h  LuaJson.cpp  LuaJson.h  LuaNameLookup.cpp  LuaNameLookup.h  LuaServerHandle.cpp  LuaServerHandle.h  LuaState.cpp  LuaState.h  LuaStateParams.h  LuaState_Call.inc  LuaTCPLink.cpp  LuaTCPLink.h  LuaUDPEndpoint.cpp  LuaUDPEndpoint.h  LuaWindow.cpp  LuaWindow.h  ManualBindings.cpp  (+19 more)
src/BlockEntities/: BannerEntity.cpp  BannerEntity.h  BeaconEntity.cpp  BeaconEntity.h  BedEntity.cpp  BedEntity.h  BlockEntity.cpp  BlockEntity.h  BlockEntityWithItems.cpp  BlockEntityWithItems.h  BrewingstandEntity.cpp  BrewingstandEntity.h  CMakeLists.txt  ChestEntity.cpp  ChestEntity.h  CommandBlockEntity.cpp  CommandBlockEntity.h  DispenserEntity.cpp  DispenserEntity.h  DropSpenserEntity.cpp  DropSpenserEntity.h  DropperEntity.cpp  DropperEntity.h  EnchantingTableEntity.cpp  EnchantingTableEntity.h  EndPortalEntity.cpp  EndPortalEntity.h  EnderChestEntity.cpp  EnderChestEntity.h  FlowerPotEntity.cpp  FlowerPotEntity.h  FurnaceEntity.cpp  FurnaceEntity.h  HopperEntity.cpp  HopperEntity.h  JukeboxEntity.cpp  JukeboxEntity.h  MobHeadEntity.cpp  MobHeadEntity.h  MobSpawnerEntity.cpp  (+10 more)
src/Blocks/: BlockAir.h  BlockAnvil.h  BlockBanner.h  BlockBed.cpp  BlockBed.h  BlockBigFlower.h  BlockBookShelf.h  BlockBrewingStand.h  BlockButton.cpp  BlockButton.h  BlockCactus.h  BlockCake.h  BlockCarpet.h  BlockCauldron.h  BlockChest.h  BlockCloth.h  BlockCobWeb.h  BlockCocoaPod.h  BlockCommandBlock.h  BlockComparator.h  BlockConcretePowder.h  BlockCraftingTable.h  BlockCrops.h  BlockDaylightSensor.h  BlockDeadBush.h  BlockDefaultBlock.h  BlockDirt.h  BlockDoor.cpp  BlockDoor.h  BlockDropSpenser.h  BlockEnchantingTable.h  BlockEnchantmentTable.h  BlockEndPortalFrame.h  BlockEnderChest.h  BlockEnderchest.h  BlockEntity.h  BlockFarmland.h  BlockFence.h  BlockFenceGate.h  BlockFire.h  (+98 more)
src/Commands/: BasicStringReader.h  CMakeLists.txt  CommandArguments.h  CommandException.h  CommandExecutionContext.h  CommandManager.cpp  CommandManager.h
src/DataComponents/: CMakeLists.txt  DataComponents.h  JsonDataCompLoader.h  (+1 more)
tests/: CMakeLists.txt  TestGlobals.h  TestHelpers.h
(+3252 files in other folders)
